--- a/Round2/Manuscript/preamble.tex
+++ b/Round2/Manuscript/preamble.tex
@@ -63,8 +63,8 @@
 \newcommand{\algo}{\mathcal{A}}
 \newcommand{\data}{\mathcal{S}}
 \newcommand{\measure}{\mathcal{P}}
-\newcommand{\measuren}{\measure^n}
+\newcommand{\measuren}{\measure_\data}
 \newcommand{\union}{\cup}
 \newcommand{\intersect}{\cap}
 \newcommand{\majority}{\accEstim_{Maj}}
-
+\newcommand{\statistic}{\mathcal{T}}
